Made a box in css, added font family

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <html>
 <head>
 
+<title>I'm going to break your legs</title>
+<link ref="icon"  href="images/favicon-32x32.png">
+<link rel="stylesheet" href="css/style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
-<div>
+
+<div class="box">
+    <p>
+        <img src="images/image-qr-code.png">
+    </p>
 <p>
-    Ohhh yeah I'm Mr. Krabs! <b>AAAAAAAAAAAAAAAAAA</b>
+    <h2>Improve your front-end skills by building projects</h2>
+</p>
+<p>
+    Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
 </p>
 
 </div>
