HTML: fixed favicon coding, added alt text to image
CSS: Added a margin top to the body, added padding to h2, changed width in box class to min-content, added width size to image

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
 
-<title>I'm going to break your legs</title>
-<link ref="icon"  href="images/favicon-32x32.png">
+<title>QR Code Component</title>
+<link rel="icon" href="images/favicon-32x32.png">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="css/style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +15,7 @@
 
 <div class="box">
     <p>
-        <img src="images/image-qr-code.png">
+        <img src="images/image-qr-code.png" alt="An image of a QR code. The QR code leads to frontendmentor.io">
     </p>
 <p>
     <h2>Improve your front-end skills by building projects</h2>
