HTML: added the doctype tag at the very beginning CSS: Added the CSS Reset coding, added a flexbox, moved around code lines such as the font-family line, set margins to all text to 0, ensured that the image will not overflow and spill out of the box README: Added some new thoughts from the revision, as well as added on more things for me to look up and practice. Added another acknowledgement.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 
@@ -11,21 +12,22 @@
 
 </head>
 
-<body>
+<!-- Use 'main' instead of 'body' - this helps screen readers
+ identify a page's main content! -->
+<main>
 
 <div class="box">
-    <p>
-        <img src="images/image-qr-code.png" alt="An image of a QR code. The QR code leads to frontendmentor.io">
-    </p>
-<p>
+    
+    <img src="images/image-qr-code.png" alt="A QR code. The QR code leads to frontendmentor.io">
+    
     <h2>Improve your front-end skills by building projects</h2>
-</p>
+
 <p>
     Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-</p>
+
 
 </div>
 
-</body>
+</main>
 
 </html>
