Added the body tag again, whoops

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 
 </head>
 
+<body>
 <!-- Use 'main' instead of 'body' - this helps screen readers
- identify a page's main content! -->
+ identify a page's main content!
+ YOU STILL NEED A BODY TAG THOUGH MAN -->
 <main>
 
 <div class="box">
@@ -29,5 +31,6 @@
 </div>
 
 </main>
+</body>
 
 </html>
